--- a/notebooks/09_Other/QIIME2_Metagenomics.ipynb
+++ b/notebooks/09_Other/QIIME2_Metagenomics.ipynb
@@ -71,35 +71,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'alignment': <qiime2.plugin.plugin.Plugin at 0x7f91567fac88>,\n",
-       " 'composition': <qiime2.plugin.plugin.Plugin at 0x7f9155971e80>,\n",
-       " 'cutadapt': <qiime2.plugin.plugin.Plugin at 0x7f91567daf98>,\n",
-       " 'dada2': <qiime2.plugin.plugin.Plugin at 0x7f9156fe4c18>,\n",
-       " 'deblur': <qiime2.plugin.plugin.Plugin at 0x7f9156d468d0>,\n",
-       " 'demux': <qiime2.plugin.plugin.Plugin at 0x7f91568a1f60>,\n",
-       " 'diversity': <qiime2.plugin.plugin.Plugin at 0x7f91567ff550>,\n",
-       " 'emperor': <qiime2.plugin.plugin.Plugin at 0x7f915681ff60>,\n",
-       " 'feature-classifier': <qiime2.plugin.plugin.Plugin at 0x7f915681fa90>,\n",
-       " 'feature-table': <qiime2.plugin.plugin.Plugin at 0x7f9156f73be0>,\n",
-       " 'gneiss': <qiime2.plugin.plugin.Plugin at 0x7f9156d46d68>,\n",
-       " 'longitudinal': <qiime2.plugin.plugin.Plugin at 0x7f9156d618d0>,\n",
-       " 'metadata': <qiime2.plugin.plugin.Plugin at 0x7f915702f710>,\n",
-       " 'phylogeny': <qiime2.plugin.plugin.Plugin at 0x7f91570020f0>,\n",
-       " 'quality-control': <qiime2.plugin.plugin.Plugin at 0x7f9156fbee10>,\n",
-       " 'quality-filter': <qiime2.plugin.plugin.Plugin at 0x7f915704bc88>,\n",
-       " 'sample-classifier': <qiime2.plugin.plugin.Plugin at 0x7f915702f828>,\n",
-       " 'taxa': <qiime2.plugin.plugin.Plugin at 0x7f915ccb2588>,\n",
-       " 'types': <qiime2.plugin.plugin.Plugin at 0x7f915cd35e80>,\n",
-       " 'vsearch': <qiime2.plugin.plugin.Plugin at 0x7f915cd29780>}"
+       "{'alignment': <qiime2.plugin.plugin.Plugin at 0x7f843047e908>,\n",
+       " 'composition': <qiime2.plugin.plugin.Plugin at 0x7f8430481be0>,\n",
+       " 'cutadapt': <qiime2.plugin.plugin.Plugin at 0x7f8430493ba8>,\n",
+       " 'dada2': <qiime2.plugin.plugin.Plugin at 0x7f84301e8dd8>,\n",
+       " 'deblur': <qiime2.plugin.plugin.Plugin at 0x7f842fcea668>,\n",
+       " 'demux': <qiime2.plugin.plugin.Plugin at 0x7f842fd41f98>,\n",
+       " 'diversity': <qiime2.plugin.plugin.Plugin at 0x7f8430466128>,\n",
+       " 'emperor': <qiime2.plugin.plugin.Plugin at 0x7f842fc2d8d0>,\n",
+       " 'feature-classifier': <qiime2.plugin.plugin.Plugin at 0x7f842fd41668>,\n",
+       " 'feature-table': <qiime2.plugin.plugin.Plugin at 0x7f842fd50898>,\n",
+       " 'gneiss': <qiime2.plugin.plugin.Plugin at 0x7f843020dac8>,\n",
+       " 'longitudinal': <qiime2.plugin.plugin.Plugin at 0x7f84304dc4a8>,\n",
+       " 'metadata': <qiime2.plugin.plugin.Plugin at 0x7f843052b978>,\n",
+       " 'phylogeny': <qiime2.plugin.plugin.Plugin at 0x7f84304931d0>,\n",
+       " 'quality-control': <qiime2.plugin.plugin.Plugin at 0x7f84304e6f60>,\n",
+       " 'quality-filter': <qiime2.plugin.plugin.Plugin at 0x7f8430525b38>,\n",
+       " 'sample-classifier': <qiime2.plugin.plugin.Plugin at 0x7f8430560a20>,\n",
+       " 'taxa': <qiime2.plugin.plugin.Plugin at 0x7f84361b56d8>,\n",
+       " 'types': <qiime2.plugin.plugin.Plugin at 0x7f8436254898>,\n",
+       " 'vsearch': <qiime2.plugin.plugin.Plugin at 0x7f84361a7f98>}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +124,7 @@
       "Summarize counts per sample for all samples, and generate interactive positional quality plots based on `n` randomly selected sequences.\n",
       "OrderedDict([('data', ParameterSpec(qiime_type=SampleData[JoinedSequencesWithQuality | PairedEndSequencesWithQuality | SequencesWithQuality], view_type=<class 'q2_demux._summarize._visualizer._PlotQualView'>, default=NOVALUE, description='The demultiplexed sequences to be summarized.'))])\n",
       "OrderedDict([('n', ParameterSpec(qiime_type=Int, view_type=<class 'int'>, default=10000, description='The number of sequences that should be selected at random for quality score plots. The quality plots will present the average positional qualities across all of the sequences selected. If input sequences are paired end, plots will be generated for both forward and reverse reads for the same `n` sequences.'))])\n",
-      "OrderedDict([('visualization', ParameterSpec(qiime_type=Visualization, view_type=None, default=NOVALUE, description=NOVALUE))])\n",
-      "OrderedDict([('data', ParameterSpec(qiime_type=SampleData[JoinedSequencesWithQuality | PairedEndSequencesWithQuality | SequencesWithQuality], view_type=<class 'q2_demux._summarize._visualizer._PlotQualView'>, default=NOVALUE, description='The demultiplexed sequences to be summarized.'))])\n"
+      "OrderedDict([('visualization', ParameterSpec(qiime_type=Visualization, view_type=None, default=NOVALUE, description=NOVALUE))])\n"
      ]
     }
    ],
@@ -134,8 +133,7 @@
     "demux_summarize_signature = demux_summarize.signature\n",
     "print(demux_summarize_signature.inputs)\n",
     "print(demux_summarize_signature.parameters)\n",
-    "print(demux_summarize_signature.outputs)\n",
-    "print(demux_summarize_signature.inputs)"
+    "print(demux_summarize_signature.outputs)"
    ]
   },
   {
@@ -185,10 +183,10 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-m5nrcpux')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-h44bqnfv')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 011de272-6501-48ac-8deb-771e74e7d747>"
+       "<visualization: Visualization uuid: 4aa5fe45-0c6f-4c69-9362-af6aeebf26d7>"
       ]
      },
      "execution_count": 4,
@@ -253,10 +251,10 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-qbvch688')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-yoquvdf_')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: ce4f5eef-91af-4cc4-9bf2-2f83f7c5bb74>"
+       "<visualization: Visualization uuid: 88627958-3139-4ac9-bf66-1989dcfdb0ac>"
       ]
      },
      "execution_count": 5,
@@ -286,7 +284,7 @@
       "Running external command line application(s). This may print messages to stdout and/or stderr.\n",
       "The command(s) being run are below. These commands cannot be manually re-run as they will depend on temporary files that no longer exist.\n",
       "\n",
-      "Command: run_dada_single.R /tmp/qiime2-archive-f6oyk935/5db90b62-c6e4-4c09-8c79-c0cdfbe2cea0/data /tmp/tmpgtd_ti78/output.tsv.biom /tmp/tmpgtd_ti78/track.tsv /tmp/tmpgtd_ti78 150 13 2.0 2 Inf consensus 1.0 1 1000000 NULL 16\n",
+      "Command: run_dada_single.R /tmp/qiime2-archive-uiodiox5/5db90b62-c6e4-4c09-8c79-c0cdfbe2cea0/data /tmp/tmpeu6ezzg7/output.tsv.biom /tmp/tmpeu6ezzg7/track.tsv /tmp/tmpeu6ezzg7 150 13 2.0 2 Inf consensus 1.0 1 1000000 NULL 16\n",
       "\n"
      ]
     }
@@ -311,7 +309,7 @@
       "Running external command line application(s). This may print messages to stdout and/or stderr.\n",
       "The command(s) being run are below. These commands cannot be manually re-run as they will depend on temporary files that no longer exist.\n",
       "\n",
-      "Command: run_dada_single.R /tmp/qiime2-archive-hk6c6pfg/5f459ea8-c6a8-438e-b42f-35e4f86166d7/data /tmp/tmpi9nvgcf_/output.tsv.biom /tmp/tmpi9nvgcf_/track.tsv /tmp/tmpi9nvgcf_ 150 13 2.0 2 Inf consensus 1.0 1 1000000 NULL 16\n",
+      "Command: run_dada_single.R /tmp/qiime2-archive-de622u8k/5f459ea8-c6a8-438e-b42f-35e4f86166d7/data /tmp/tmpi0zda_vn/output.tsv.biom /tmp/tmpi0zda_vn/track.tsv /tmp/tmpi0zda_vn 150 13 2.0 2 Inf consensus 1.0 1 1000000 NULL 16\n",
       "\n"
      ]
     }
@@ -359,10 +357,10 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-7bi8_tli')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-2upc1mei')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 0e50a4d9-f705-4ea2-b280-96a1c16e2d3c>"
+       "<visualization: Visualization uuid: 3028e5f9-5aff-4ae6-a163-41942d4a1ccc>"
       ]
      },
      "execution_count": 8,
@@ -415,10 +413,10 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-bfo3ljxi')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-mklsu3cm')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 7529e83a-6604-4c39-8bfc-3d40d2632c9b>"
+       "<visualization: Visualization uuid: 8fb65ec5-1576-4cdb-9191-e387c04bf9f7>"
       ]
      },
      "execution_count": 9,
@@ -433,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,23 +442,12 @@
     "ft_tab_seqs = ft_plugin.actions['tabulate_seqs']\n",
     "\n",
     "table_merge = ft_merge(tables=[qual_control1.table, qual_control2.table])\n",
-    "from q2_types.feature_data import Sequence\n",
-    "\n",
     "seqs_merge = ft_merge_seqs(data=[qual_control1.representative_sequences, qual_control2.representative_sequences])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ft_sum = ft_summarize(table=table_merge.merged_table)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -496,13 +483,67 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-j5d80d7j')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-tbqykfer')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 90f57565-6db5-4ee9-953d-e06ea04631a1>"
+       "<visualization: Visualization uuid: 2d2f3759-6cc4-447a-b62f-372e248c8f07>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ft_sum = ft_summarize(table=table_merge.merged_table)\n",
+    "ft_sum.visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-kbypdl2q')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 3889631a-8101-4234-b9a5-8f8aa1fee838>"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,15 +551,6 @@
    "source": [
     "tab_seqs = ft_tab_seqs(data=seqs_merge.merged_data)\n",
     "tab_seqs.visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#talk about zips"
    ]
   },
   {
