--- a/notebooks/00_Intro/Interfacing_R.ipynb
+++ b/notebooks/00_Intro/Interfacing_R.ipynb
@@ -9,11 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2018-09-18 14:09:47--  ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/historical_data/former_toplevel/sequence.index\n",
+      "           => ‘sequence.index’\n",
+      "Resolving ftp.1000genomes.ebi.ac.uk (ftp.1000genomes.ebi.ac.uk)... 193.62.192.8\n",
+      "Connecting to ftp.1000genomes.ebi.ac.uk (ftp.1000genomes.ebi.ac.uk)|193.62.192.8|:21... connected.\n",
+      "Logging in as anonymous ... Logged in!\n",
+      "==> SYST ... done.    ==> PWD ... done.\n",
+      "==> TYPE I ... done.  ==> CWD (1) /vol1/ftp/historical_data/former_toplevel ... done.\n",
+      "==> SIZE sequence.index ... 67069489\n",
+      "==> PASV ... done.    ==> RETR sequence.index ... done.\n",
+      "Length: 67069489 (64M) (unauthoritative)\n",
+      "\n",
+      "sequence.index      100%[===================>]  63.96M  1.35MB/s    in 49s     \n",
+      "\n",
+      "2018-09-18 14:10:38 (1.31 MB/s) - ‘sequence.index’ saved [67069489]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!rm sequence.index 2>/dev/null\n",
     "!wget -nd ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/historical_data/former_toplevel/sequence.index -O sequence.index"
@@ -28,14 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/rpy2/robjects/lib/ggplot2.py:67: UserWarning: This was designed againt ggplot2 version 2.2.1 but you have 3.0.0\n",
+      "  warnings.warn('This was designed againt ggplot2 version %s but you have %s' % (TARGET_VERSION, ggplot2.__version__))\n"
+     ]
+    }
+   ],
    "source": [
-    "#XXX big change\n",
-    "#XXX also install r-essentials\n",
     "import os\n",
     "\n",
     "from IPython.display import Image\n",
@@ -53,11 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'rpy2.robjects.vectors.DataFrame'>\n"
+     ]
+    }
+   ],
    "source": [
     "read_delim = robjects.r('read.delim')\n",
     "seq_data = read_delim('sequence.index', header=True, stringsAsFactors=False)\n",
@@ -68,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -247,9 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -277,9 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Get Yoruba and CEU\n",
@@ -290,9 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -318,9 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1547,7 +1568,6 @@
     }
    ],
    "source": [
-    "#XXX change\n",
     "pd_yri_ceu = pandas2ri.ri2py(yri_ceu)\n",
     "print(type(pd_yri_ceu))\n",
     "pd_yri_ceu"
@@ -1556,9 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1679,9 +1697,7 @@
     }
    ],
    "source": [
-    "#XXX change\n",
     "del pd_yri_ceu['PAIRED_FASTQ']\n",
-    "#no_paired = pd_common.convert_to_r_dataframe(pd_yri_ceu)\n",
     "no_paired = pandas2ri.py2ri(pd_yri_ceu)\n",
     "robjects.r.assign('no.paired', no_paired)\n",
     "robjects.r(\"print(colnames(no.paired))\")"
@@ -1690,9 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
