--- a/notebooks/08_Advanced/Parquet.ipynb
+++ b/notebooks/08_Advanced/Parquet.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_ddf.to_parquet('geno')"
+    "all_ddf.to_parquet('geno.parquet', compression='none')"
    ]
   },
   {
