--- a/notebooks/08_Advanced/Spark.ipynb
+++ b/notebooks/08_Advanced/Spark.ipynb
@@ -2,26 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/home/tra/Downloads/spark-2.3.2-bin-hadoop2.7/python/')"
+    "sys.path.append('/home/tra/Downloads/spark-2.3.2-bin-hadoop2.7/python/') # Not conda\n",
+    "#Careful with Java version\n",
+    "#conda install py4j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyspark as spark"
+    "import pyspark as spark\n",
+    "from pyspark.sql.functions import col,round as round_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,10 +51,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.dataframe.DataFrame"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(all_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+\n",
+      "|window|count|\n",
+      "+------+-----+\n",
+      "|   0.0|   43|\n",
+      "|   1.0|  475|\n",
+      "|   2.0|  858|\n",
+      "|   3.0| 1146|\n",
+      "|   4.0|  915|\n",
+      "|   6.0|  746|\n",
+      "|   7.0| 1420|\n",
+      "|   8.0| 1167|\n",
+      "|   9.0|   32|\n",
+      "|  10.0|  255|\n",
+      "|  11.0|  471|\n",
+      "|  12.0|  110|\n",
+      "|  13.0| 1336|\n",
+      "|  14.0|   75|\n",
+      "|  15.0| 1770|\n",
+      "|  16.0| 1693|\n",
+      "|  17.0| 2251|\n",
+      "|  18.0| 1157|\n",
+      "|  19.0|  668|\n",
+      "|  20.0|  898|\n",
+      "+------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_df.select(col(\"*\"), round_(col(\"POS\") / 50000).alias('window')).groupBy('window').count().orderBy('window').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function round in module pyspark.sql.functions:\n",
+      "\n",
+      "round(col, scale=0)\n",
+      "    Round the given value to `scale` decimal places using HALF_UP rounding mode if `scale` >= 0\n",
+      "    or at integral part when `scale` < 0.\n",
+      "    \n",
+      "    >>> spark.createDataFrame([(2.5,)], ['a']).select(round('a', 0).alias('r')).collect()\n",
+      "    [Row(r=3.0)]\n",
+      "    \n",
+      "    .. versionadded:: 1.5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(round_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a."
+   ]
   }
  ],
  "metadata": {
