--- a/notebooks/08_Advanced/HDF5.ipynb
+++ b/notebooks/08_Advanced/HDF5.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "last_position = positions[-1]"
+    "window_size = 50000"
    ]
   },
   {
@@ -101,40 +101,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window_size = 50000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_windows = ceil(last_position / window_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "limits = np.full((num_windows, 2), -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "last_position = positions[-1]\n",
+    "num_windows = ceil(last_position / window_size)\n",
+    "limits = np.full((num_windows, 2), -1)\n",
     "curr_window = positions[0] // window_size\n",
     "limits[curr_window, 0] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +153,7 @@
        "(array([ 0, 43]), array([9642606, 9643193]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +173,7 @@
        "(839, 840)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,11 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# XXX copy to dask (at least)\n",
     "def calc_statistics(v):\n",
     "    start, end = v[0], v[1]\n",
     "    min_maf = 0.5\n",
@@ -249,27 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1], dtype=int8)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(calldata_genotype[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -314,36 +269,13 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " ...\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]] -1 -1 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(calldata_genotype[39], np.sum(calldata_genotype[39]), np.min(calldata_genotype[39]), np.max(calldata_genotype[39]))"
    ]
   },
   {
