--- a/notebooks/08_Advanced/HDF5.ipynb
+++ b/notebooks/08_Advanced/HDF5.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tra/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import ceil\n",
     "\n",
@@ -49,41 +40,39 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<HDF5 dataset \"genotype\": shape (9643193, 765, 2), type \"|i1\">"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<HDF5 dataset \"genotype\": shape (9643193, 765, 2), type \"|i1\">\n"
+     ]
     }
    ],
    "source": [
-    "calldata_genotype"
+    "print(calldata_genotype)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<HDF5 dataset \"samples\": shape (765,), type \"|S8\">"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<HDF5 dataset \"samples\": shape (765,), type \"|S8\">\n"
+     ]
     }
    ],
    "source": [
-    "samples"
+    "print(samples)"
    ]
   },
   {
@@ -148,38 +137,32 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([ 0, 43]), array([9642606, 9643193]))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 43] [9642606 9643193]\n"
+     ]
     }
    ],
    "source": [
-    "limits[0], limits[-1]"
+    "print(limits[0], limits[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(839, 840)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "839 840\n"
+     ]
     }
    ],
    "source": [
-    "positions[-1] // window_size, num_windows"
+    "print(positions[-1] //  window_size, num_windows)"
    ]
   },
   {
@@ -275,7 +258,7 @@
     }
    ],
    "source": [
-    "stats"
+    "print(stats)"
    ]
   },
   {
