--- a/notebooks/08_Advanced/Parquet.ipynb
+++ b/notebooks/08_Advanced/Parquet.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tra/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import ceil\n",
     "\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +26,12 @@
     "positions = h5_3L['/3L/variants/POS']\n",
     "is_snp = h5_3L['/3L/variants/is_snp']\n",
     "qual = h5_3L['/3L/variants/QUAL']\n",
-    "mq0 = h5_3L['/3L/variants/MQ0']\n"
+    "mq0 = h5_3L['/3L/variants/MQ0']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_ddf.to_parquet('geno.parquet', compression='none')"
+    "all_ddf.to_parquet('geno.parquet')"
    ]
   },
   {
